# soule

./: .gitignore  .swiftlint.yml  README.md  project.yml
.github/workflows/: android.yml  ci.yml
AppStore/: metadata.json
AppStore/android/: store_listing.txt
Scripts/: bump_version.sh  download_models.sh  setup.sh
Soulo/App/: AppDelegate.swift  SouloApp.swift
Soulo/Models/: BehaviorPrediction.swift  CognitiveDrift.swift  DailyInsight.swift  DetectedPattern.swift  EmotionalState.swift  JournalDecision.swift  JournalEntry.swift  PersonalizedInsight.swift  Settings.swift  SubscriptionStatus.swift  TopicAnalysis.swift  VoiceBiomarkers.swift
Soulo/Resources/: App.xcconfig  Info.plist
Soulo/Services/: BackupService.swift  BaselineService.swift  BehaviorPredictionService.swift  BiomarkerService.swift  BiomarkerTrendService.swift  CognitiveDriftService.swift  DailyInsightService.swift  DecisionOutcomeService.swift  EmotionDetectionService.swift  EncryptionService.swift  ErrorRecoveryService.swift  (+13 more)
android/: PLAN_OF_ACTION.md  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
backend/: StripeWebhook.js
docs/: APP_STORE_SUBMISSION.md  BUSINESS_MODEL.md  CI_CD.md  DATABASE_SCHEMA.md  DATA_RECOVERY.md  ERROR_HANDLING.md  FAQ.md  MILESTONES.md  MODEL_INTEGRATION_GUIDE.md  MONITORING.md  PERFORMANCE_BUDGET.md  PLAN_OF_ACTION.md  PRD.md  PRIVACY_POLICY.md  SECURITY_AUDIT.md  TECHNICAL_ARCHITECTURE.md  TERMS_OF_SERVICE.md  TESTING_STRATEGY.md  UI_DESIGN.md
(+82 files in other folders)
